experiments different ordering

--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "29          5                  0      33.173567"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,13 +1994,207 @@
     "\n",
     "This might explain the bad performance we have observed so far. We are taking the labels that could benefit more from previous label information, and putting them at the start of the chain, where they will have no help at all.\n",
     "\n",
-    "Let's try to invert this order and see what happens."
+    "Let's try to invert this order and see what happens.\n",
+    "\n",
+    "**To do so, I will try to check which label has the lowest F-test to all other labels, and start the chain from there**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing order: [0, 1, 2, 3, 4, 5]\n",
+      "Accuracy score:  0.6780936454849499\n",
+      "Hamming loss:  0.09085841694537347\n",
+      "===\n",
+      "testing order: [5, 4, 3, 2, 1, 0]\n",
+      "Accuracy score:  0.051839464882943144\n",
+      "Hamming loss:  0.3171683389074693\n",
+      "===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# simple orders\n",
+    "test_ordering([0, 1, 2, 3, 4, 5])  # default\n",
+    "test_ordering([5, 4, 3, 2, 1, 0])  # reversed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "for_label\n",
+       "0    221.995604\n",
+       "1    226.089702\n",
+       "2    231.429842\n",
+       "3    183.674063\n",
+       "4    238.813732\n",
+       "5    269.737991\n",
+       "Name: f_test_result, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "for_label\n",
+       "0    44.399121\n",
+       "1    45.217940\n",
+       "2    46.285968\n",
+       "3    36.734813\n",
+       "4    47.762746\n",
+       "5    53.947598\n",
+       "Name: f_test_result, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "res.sort_values(\"f_test_result\", ascending=False)\n",
+    "\n",
+    "display(res.groupby(\"for_label\")[\"f_test_result\"].sum())\n",
+    "display(res.groupby(\"for_label\")[\"f_test_result\"].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>for_label</th>\n",
+       "      <th>expand_this_label</th>\n",
+       "      <th>f_test_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>59.336173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.657072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>44.889245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>38.222988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>37.984223</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   for_label  expand_this_label  f_test_result\n",
+       "5          1                  4      59.336173\n",
+       "6          1                  0      45.657072\n",
+       "7          1                  5      44.889245\n",
+       "8          1                  2      38.222988\n",
+       "9          1                  3      37.984223"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ok, let's start with \"3\" as it ranked lower\n",
+    "# from \"3\", let's get the more correlated labels\n",
+    "\n",
+    "# res.sort_values(\"f_test_result\", ascending=False)\n",
+    "\n",
+    "m = res[\"for_label\"] == 1\n",
+    "res[m]\n",
+    "\n",
+    "# 3 -> 0 -> 2 -> 5 -> 4 -> 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing order: [3, 0, 2, 5, 4, 1]\n",
+      "Accuracy score:  0.2408026755852843\n",
+      "Hamming loss:  0.2488851727982163\n",
+      "===\n",
+      "testing order: [1, 4, 5, 2, 0, 3]\n",
+      "Accuracy score:  0.029264214046822744\n",
+      "Hamming loss:  0.31842251950947603\n",
+      "===\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_ordering([3, 0, 2, 5, 4, 1])  # default\n",
+    "test_ordering(list(reversed([3, 0, 2, 5, 4, 1])))  # reversed"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The results are **better** than everything that was observed so far. But still worse than the default ordering. This is really becoming a mystery.\n",
+    "\n",
+    "Let's try to do something totally in reverse ordering, chaining the lowest correlated labels all the way."
+   ]
   }
  ],
  "metadata": {
