finishes second notebook

--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -2195,6 +2195,129 @@
     "\n",
     "Let's try to do something totally in reverse ordering, chaining the lowest correlated labels all the way."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>for_label</th>\n",
+       "      <th>expand_this_label</th>\n",
+       "      <th>f_test_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>25.999023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.222988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>54.713588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>55.765976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.728266</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    for_label  expand_this_label  f_test_result\n",
+       "14          2                  3      25.999023\n",
+       "13          2                  1      38.222988\n",
+       "12          2                  4      54.713588\n",
+       "11          2                  5      55.765976\n",
+       "10          2                  0      56.728266"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = res[\"for_label\"] == 2\n",
+    "res[m].sort_values(\"f_test_result\", ascending=True)\n",
+    "\n",
+    "# 3 -> 4 -> 0 -> 5 -> 1 -> 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing order: [3, 4, 0, 5, 1, 2]\n",
+      "Accuracy score:  0.017558528428093644\n",
+      "Hamming loss:  0.33124303232998886\n",
+      "===\n",
+      "testing order: [2, 1, 5, 0, 4, 3]\n",
+      "Accuracy score:  0.25585284280936454\n",
+      "Hamming loss:  0.24400780379041248\n",
+      "===\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_ordering([3, 4, 0, 5, 1, 2])  # default\n",
+    "test_ordering(list(reversed([3, 4, 0, 5, 1, 2])))  # reversed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, no luck. The reversed ordering actually got the best result so far, but still worse than the default ordering. And it is not possible to stablish a rationale for it.\n",
+    "\n",
+    "Let's take a step back and build a proper evaluation pipeline first. Then we can try to go back to this model, which will be implemented anyway.\n",
+    "\n",
+    "But this will be done on a separate notebook, as this one is already too big."
+   ]
   }
  ],
  "metadata": {
