removes unused imports

--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -20,19 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skmultilearn.problem_transform import BinaryRelevance\n",
     "from skmultilearn.problem_transform import ClassifierChain\n",
-    "from skmultilearn.dataset import load_dataset, available_data_sets\n",
+    "from skmultilearn.dataset import load_dataset\n",
     "from sklearn.svm import SVC\n",
-    "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
-    "from typing import List, Optional, Any, Tuple, Dict\n",
+    "from typing import List, Any, Dict\n",
     "import numpy as np\n",
     "import sklearn.metrics as metrics\n",
-    "import json\n",
     "import pandas as pd\n",
     "from sklearn.feature_selection import f_classif\n"
    ]
