adds a note about impossibility

--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -1975,6 +1975,7 @@
     "So, I see a few necessary improvements to take:\n",
     "* Stablish a proper evaluation pipeline that uses cross validation. This should mitigate the problem of datasets being too sensitive to a particular split or ordering.\n",
     "* Implement a custom `ClassifierChain` base method that logs the model performance on each label. This should help us to understand if the performance is increasing or decreasing as the chain progresses.\n",
+    "  * 2023-10-04: This is **not** really possible as the model would be \"incomplete\". That is: only part of the labels would be available at each step, so the performance would be biased.\n",
     "* Fully implement the proposed ordering method. Even if the results are still bad, this study should count towards the final report. It is an effort that I am making, it is being documented, and it is a valid result, even if negative.\n",
     "* Finally, just for the sake of testing, do an alternative ordering method that actually considers the lowest correlation when building the chain."
    ]
