--- a/3_evaluation_pipeline.ipynb
+++ b/3_evaluation_pipeline.ipynb
@@ -6,18 +6,29 @@
    "source": [
     "# 3. Evaluation pipeline\n",
     "\n",
-    "The initial results for the second model are quite mixed. Actually, they are quite bad in general. But it is a bit hard to understand why its performance is so bad without having a proper evaluation pipeline, that should use cross-validation as a way to mitigate the effects of the randomness of the train-test split."
+    "The initial results for the second model are quite mixed. Actually, they are quite bad in general. But it is a bit hard to understand why its performance is so bad without having a proper evaluation pipeline, that should use cross-validation as a way to mitigate the effects of the randomness of the train-test split.\n",
+    "\n",
+    "## 3.1. Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.model_selection import KFold\n",
-    "from skmultilearn.dataset import load_dataset\n"
+    "from sklearn.model_selection import KFold, cross_validate\n",
+    "from skmultilearn.dataset import load_dataset\n",
+    "from skmultilearn.problem_transform import ClassifierChain\n",
+    "from sklearn.svm import SVC\n",
+    "import sklearn.metrics as metrics\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2. Experimentation"
    ]
   },
   {
@@ -29,8 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scene:undivided - does not exists downloading\n",
-      "Downloaded scene-undivided\n",
+      "scene:undivided - exists, not redownloading\n",
       "scene:train - exists, not redownloading\n",
       "scene:test - exists, not redownloading\n"
      ]
@@ -44,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,35 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_full, y_full, _, _ = full_data\n"
+    "X_full, y_full, _, _ = full_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 0\n",
-      "TRAIN: 1925 TEST: 482\n",
-      "Fold 1\n",
-      "TRAIN: 1925 TEST: 482\n",
-      "Fold 2\n",
-      "TRAIN: 1926 TEST: 481\n",
-      "Fold 3\n",
-      "TRAIN: 1926 TEST: 481\n",
-      "Fold 4\n",
-      "TRAIN: 1926 TEST: 481\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dense_X_full = X_full.toarray()\n",
     "dense_y_full = y_full.toarray()\n",
@@ -141,35 +134,21 @@
     "    y_train = dense_y_full[train_index]\n",
     "\n",
     "    X_test = dense_X_full[test_index]\n",
-    "    y_test = dense_y_full[test_index]\n",
-    "\n",
-    "    \n"
+    "    y_test = dense_y_full[test_index]\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Notice**: `StratifiedKFold` **cannot** be used as it does not support multilabel ([source](https://stackoverflow.com/questions/48508036/sklearn-stratifiedkfold-valueerror-supported-target-types-are-binary-mul))."
+    "**Notice**: `StratifiedKFold` **cannot** be used as it does not support multilabel ([source](https://stackoverflow.com/questions/48508036/sklearn-stratifiedkfold-valueerror-supported-target-types-are-binary-mul)).\n",
+    "\n",
+    "Instead of trying to set up everything by myself, let's use something that Scikit already provides: the `cross_validate` function, as described [here](https://scikit-learn.org/stable/modules/cross_validation.html#the-cross-validate-function-and-multiple-metric-evaluation)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import cross_validate\n",
-    "from sklearn.metrics import make_scorer\n",
-    "from skmultilearn.problem_transform import ClassifierChain\n",
-    "from sklearn.svm import SVC\n",
-    "import sklearn.metrics as metrics\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,37 +160,13 @@
     "s = {\"accuracy\": make_scorer(metrics.accuracy_score),\n",
     "     \"hamming_loss\": make_scorer(metrics.hamming_loss, greater_is_better=False)}\n",
     "\n",
-    "r = cross_validate(clf, X_full, y_full, cv=5, scoring=s, return_train_score=True)\n"
+    "r = cross_validate(clf, X_full, y_full, cv=5, scoring=s, return_train_score=True)\n",
+    "r\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'fit_time': array([6.38895631, 5.47674799, 3.91034126, 4.25431085, 3.89205217]),\n",
-       " 'score_time': array([0.90128756, 0.72894812, 0.67406583, 0.93108773, 0.71495819]),\n",
-       " 'test_accuracy': array([0.60788382, 0.62448133, 0.56340956, 0.75883576, 0.6049896 ]),\n",
-       " 'train_accuracy': array([0.7974026 , 0.79792208, 0.80425753, 0.78971963, 0.80685358]),\n",
-       " 'test_hamming_loss': array([-0.12275242, -0.11687414, -0.13513514, -0.06618157, -0.11884962]),\n",
-       " 'train_hamming_loss': array([-0.05809524, -0.05800866, -0.05304604, -0.06022845, -0.05209415])}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +175,7 @@
        "(0.6319200144926287, 0.06657267886278025)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +195,7 @@
        "(-0.11195857523658352, 0.023752236934311968)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,45 +206,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf2 = ClassifierChain(\n",
-    "    classifier=SVC(),\n",
-    "    require_dense=[False, True],\n",
-    "    order=[3, 0, 2, 5, 4, 1]\n",
-    ")\n",
-    "\n",
-    "s2 = {\"accuracy\": make_scorer(metrics.accuracy_score),\n",
-    "     \"hamming_loss\": make_scorer(metrics.hamming_loss, greater_is_better=False)}\n",
-    "\n",
-    "r2 = cross_validate(clf2, X_full, y_full, cv=5,\n",
-    "                   scoring=s2, return_train_score=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'fit_time': array([4.16601849, 4.84276986, 4.13891101, 4.2367835 , 3.85717344]),\n",
-       " 'score_time': array([0.69529414, 0.74412417, 0.69608188, 0.70389557, 0.64631033]),\n",
+       "{'fit_time': array([4.06053257, 4.29102755, 3.58891082, 4.0080204 , 3.63190055]),\n",
+       " 'score_time': array([0.65458941, 0.65905857, 0.6446743 , 0.67406464, 0.62596703]),\n",
        " 'test_accuracy': array([0.1473029 , 0.39626556, 0.05613306, 0.28274428, 0.3035343 ]),\n",
        " 'train_accuracy': array([0.31324675, 0.20727273, 0.3556594 , 0.26272066, 0.27050883]),\n",
        " 'test_hamming_loss': array([-0.28284924, -0.20020747, -0.31185031, -0.23354123, -0.22903673]),\n",
        " 'train_hamming_loss': array([-0.22995671, -0.26554113, -0.21581862, -0.25034614, -0.24575978])}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# quick testing, using the proposed order based on F-test\n",
+    "\n",
+    "clf2 = ClassifierChain(\n",
+    "    classifier=SVC(),\n",
+    "    require_dense=[False, True],\n",
+    "    order=[3, 0, 2, 5, 4, 1]\n",
+    ")\n",
+    "\n",
+    "s2 = {\"accuracy\": metrics.make_scorer(metrics.accuracy_score),\n",
+    "      \"hamming_loss\": metrics.make_scorer(metrics.hamming_loss, greater_is_better=False)}\n",
+    "\n",
+    "r2 = cross_validate(clf2, X_full, y_full, cv=5,\n",
+    "                   scoring=s2, return_train_score=True)\n",
     "r2"
    ]
   },
@@ -297,13 +246,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ok, the initial results here show that the proposed Classifier Chain is indeed consistently bad. Regardless, now I have a better ideia of how to set up this evaluation pipeline, which I should conclude tomorrow."
+    "Ok, the initial results here show that the proposed Classifier Chain is indeed **consistently bad**. Regardless, now I have a better ideia of how to set up this evaluation pipeline, which I should conclude tomorrow."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
