finishes evaluation pipeline

--- a/3_evaluation_pipeline.ipynb
+++ b/3_evaluation_pipeline.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,10 @@
     "from skmultilearn.dataset import load_dataset\n",
     "from skmultilearn.problem_transform import ClassifierChain\n",
     "from sklearn.svm import SVC\n",
-    "import sklearn.metrics as metrics\n"
+    "import sklearn.metrics as metrics\n",
+    "from typing import Any, Dict\n",
+    "from numpy.typing import ArrayLike\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -247,6 +250,123 @@
    "metadata": {},
    "source": [
     "Ok, the initial results here show that the proposed Classifier Chain is indeed **consistently bad**. Regardless, now I have a better ideia of how to set up this evaluation pipeline, which I should conclude tomorrow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3. Evaluation pipeline implementation\n",
+    "\n",
+    "The idea is to have a class with a `run()` method that will use a set of parameters and metrics that all modes in this work should use.\n",
+    "\n",
+    "For now, this pipeline will be described directly in this notebook. But I plan to move it to a `.py` file of its own to then use in other notebooks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EvaluationPipelineResult:\n",
+    "    cross_validate_result: Dict[Any, Any]\n",
+    "\n",
+    "    def __init__(self, cross_validate_result: Dict[Any, Any]) -> None:\n",
+    "        self.cross_validate_result = cross_validate_result\n",
+    "    \n",
+    "    def describe(self) -> None:\n",
+    "        print(\"Accuracy: {:.4f} ± {:.2f}\".format(\n",
+    "            self.cross_validate_result[\"test_accuracy\"].mean(),\n",
+    "            self.cross_validate_result[\"test_accuracy\"].std()\n",
+    "        ))\n",
+    "\n",
+    "        print(\"Hamming Loss: {:.4f} ± {:.2f}\".format(\n",
+    "            self.cross_validate_result[\"test_hamming_loss\"].mean(),\n",
+    "            self.cross_validate_result[\"test_hamming_loss\"].std()\n",
+    "        ))\n",
+    "    \n",
+    "    def raw(self) -> Dict[Any, Any]:\n",
+    "        return self.cross_validate_result\n",
+    "\n",
+    "class EvaluationPipeline:\n",
+    "    model: Any\n",
+    "    n_folds: int\n",
+    "\n",
+    "    def __init__(self, model: Any, n_folds: int = 5) -> None:\n",
+    "        # TODO: establish the model type\n",
+    "        self.model = model\n",
+    "        self.n_folds = n_folds\n",
+    "\n",
+    "    def run(self, X: Any, y: Any) -> EvaluationPipelineResult:\n",
+    "        accuracy_scorer = metrics.make_scorer(metrics.accuracy_score)\n",
+    "        hamming_loss_scorer = metrics.make_scorer(\n",
+    "            metrics.hamming_loss, greater_is_better=False)\n",
+    "\n",
+    "        scoring_set = {\n",
+    "            \"accuracy\": accuracy_scorer,\n",
+    "            \"hamming_loss\": hamming_loss_scorer,\n",
+    "        }\n",
+    "\n",
+    "        validate_result = cross_validate(\n",
+    "            self.model,\n",
+    "            X, y,\n",
+    "            cv=self.n_folds,\n",
+    "            scoring=scoring_set,\n",
+    "            return_train_score=True)\n",
+    "\n",
+    "        return EvaluationPipelineResult(validate_result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.2563 ± 0.12\n",
+      "Hamming Loss: -0.2482 ± 0.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf3 = ClassifierChain(\n",
+    "    classifier=SVC(),\n",
+    "    require_dense=[False, True],\n",
+    "    order=[1, 3, 2, 5, 4, 0] # whatever order\n",
+    ")\n",
+    "\n",
+    "evaluation_pipeline = EvaluationPipeline(clf3)\n",
+    "result = evaluation_pipeline.run(X_full, y_full)\n",
+    "result.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([4.27550077, 4.38973761, 3.88086176, 3.95994496, 3.68254423]),\n",
+       " 'score_time': array([0.73751068, 0.69558883, 0.63721609, 0.70021701, 0.63118529]),\n",
+       " 'test_accuracy': array([0.13900415, 0.38381743, 0.1039501 , 0.28274428, 0.37214137]),\n",
+       " 'train_accuracy': array([0.3225974 , 0.22597403, 0.36137072, 0.28089304, 0.28504673]),\n",
+       " 'test_hamming_loss': array([-0.28181189, -0.20746888, -0.3000693 , -0.23769924, -0.21413721]),\n",
+       " 'train_hamming_loss': array([-0.22649351, -0.2578355 , -0.21183801, -0.24048114, -0.23901004])}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.raw()"
    ]
   }
  ],
