moves evaluation pipeline to a file of its own

--- a/3_evaluation_pipeline.ipynb
+++ b/3_evaluation_pipeline.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,7 @@
     "from skmultilearn.problem_transform import ClassifierChain\n",
     "from sklearn.svm import SVC\n",
     "import sklearn.metrics as metrics\n",
-    "from typing import Any, Dict\n",
-    "from numpy.typing import ArrayLike\n",
-    "import numpy as np\n"
+    "from typing import Any, Dict\n"
    ]
   },
   {
