--- a/4_second_model_actual_implementation.ipynb
+++ b/4_second_model_actual_implementation.ipynb
@@ -2,6 +2,368 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from support import CalculateLabelsCorrelationWithFTest\n",
+    "from skmultilearn.dataset import load_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scene:train - exists, not redownloading\n",
+      "scene:test - exists, not redownloading\n",
+      "scene:train - exists, not redownloading\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data = load_dataset(\"scene\", \"train\")\n",
+    "test_data = load_dataset(\"scene\", \"test\")\n",
+    "# let's use the same \"scene\" dataset, that was used in the previous notebook (`1_first_model_experiments.ipynb`)\n",
+    "\n",
+    "train_data = load_dataset(\"scene\", \"train\")\n",
+    "_, y_train, _, _ = train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ccwf = CalculateLabelsCorrelationWithFTest(alpha=1)\n",
+    "res = ccwf.get(y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>for_label</th>\n",
+       "      <th>expand_this_label</th>\n",
+       "      <th>f_test_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>56.728266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.368680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45.657072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>33.173567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30.068018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>59.336173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.657072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>44.889245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>38.222988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>37.984223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.728266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>55.765976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>54.713588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.222988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>25.999023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.368680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>52.267693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37.984223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>25.999023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11.054443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>83.641509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59.336173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>54.713588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.068018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11.054443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>83.641509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55.765976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>52.267693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44.889245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.173567</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    for_label  expand_this_label  f_test_result\n",
+       "0           0                  2      56.728266\n",
+       "1           0                  3      56.368680\n",
+       "2           0                  1      45.657072\n",
+       "3           0                  5      33.173567\n",
+       "4           0                  4      30.068018\n",
+       "5           1                  4      59.336173\n",
+       "6           1                  0      45.657072\n",
+       "7           1                  5      44.889245\n",
+       "8           1                  2      38.222988\n",
+       "9           1                  3      37.984223\n",
+       "10          2                  0      56.728266\n",
+       "11          2                  5      55.765976\n",
+       "12          2                  4      54.713588\n",
+       "13          2                  1      38.222988\n",
+       "14          2                  3      25.999023\n",
+       "15          3                  0      56.368680\n",
+       "16          3                  5      52.267693\n",
+       "17          3                  1      37.984223\n",
+       "18          3                  2      25.999023\n",
+       "19          3                  4      11.054443\n",
+       "20          4                  5      83.641509\n",
+       "21          4                  1      59.336173\n",
+       "22          4                  2      54.713588\n",
+       "23          4                  0      30.068018\n",
+       "24          4                  3      11.054443\n",
+       "25          5                  4      83.641509\n",
+       "26          5                  2      55.765976\n",
+       "27          5                  3      52.267693\n",
+       "28          5                  1      44.889245\n",
+       "29          5                  0      33.173567"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "... 0\n",
+      "... 1\n",
+      "... 2\n",
+      "... 3\n",
+      "... 4\n",
+      "... 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 1, 0, 2, 3]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def build_chain_based_on_f_test(res):\n",
+    "    chain = []\n",
+    "    sorted_res = res.sort_values(by=[\"f_test_result\"], ascending=False)\n",
+    "    \n",
+    "    element = int(sorted_res.iloc[0][\"for_label\"])\n",
+    "    chain.append(element)\n",
+    "    \n",
+    "    j = 0\n",
+    "\n",
+    "    while j < 10:\n",
+    "        print(f\"... {j}\")\n",
+    "        j += 1\n",
+    "\n",
+    "        m = ~sorted_res[\"expand_this_label\"].isin(chain)\n",
+    "        m &= sorted_res[\"for_label\"] == element\n",
+    "\n",
+    "        if m.sum() == 0:\n",
+    "            break\n",
+    "\n",
+    "        sliced_res = sorted_res[m]\n",
+    "        sorted_sliced_res = sliced_res.sort_values(by=[\"f_test_result\"], ascending=False)\n",
+    "\n",
+    "        element = int(sorted_sliced_res.iloc[0][\"expand_this_label\"])\n",
+    "        chain.append(element)\n",
+    "    \n",
+    "    return chain\n",
+    "\n",
+    "build_chain_based_on_f_test(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +371,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "default_python",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
