reorganizes the code

--- a/4_second_model_actual_implementation.ipynb
+++ b/4_second_model_actual_implementation.ipynb
@@ -305,28 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... 0\n",
-      "... 1\n",
-      "... 2\n",
-      "... 3\n",
-      "... 4\n",
-      "... 5\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[5, 4, 1, 0, 2, 3]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,24 +326,19 @@
     "    \n",
     "    element = int(sorted_res.iloc[0][\"for_label\"])\n",
     "    chain.append(element)\n",
+    "\n",
+    "    m = ~sorted_res[\"expand_this_label\"].isin(chain)\n",
+    "    m &= sorted_res[\"for_label\"] == element\n",
     "    \n",
-    "    j = 0\n",
-    "\n",
-    "    while j < 10:\n",
-    "        print(f\"... {j}\")\n",
-    "        j += 1\n",
-    "\n",
-    "        m = ~sorted_res[\"expand_this_label\"].isin(chain)\n",
-    "        m &= sorted_res[\"for_label\"] == element\n",
-    "\n",
-    "        if m.sum() == 0:\n",
-    "            break\n",
-    "\n",
+    "    while m.sum() > 0:\n",
     "        sliced_res = sorted_res[m]\n",
     "        sorted_sliced_res = sliced_res.sort_values(by=[\"f_test_result\"], ascending=False)\n",
     "\n",
     "        element = int(sorted_sliced_res.iloc[0][\"expand_this_label\"])\n",
     "        chain.append(element)\n",
+    "\n",
+    "        m = ~sorted_res[\"expand_this_label\"].isin(chain)\n",
+    "        m &= sorted_res[\"for_label\"] == element\n",
     "    \n",
     "    return chain\n",
     "\n",
