adds conclusions for second implementation

--- a/4_second_model_actual_implementation.ipynb
+++ b/4_second_model_actual_implementation.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Actual implementation of the second model\n",
+    "\n",
+    "Now we will really implement the proposed second model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {},
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,26 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "oi!\n",
-      "tchau\n",
-      "oi!\n",
-      "tchau\n",
-      "oi!\n",
-      "tchau\n",
-      "oi!\n",
-      "tchau\n",
-      "oi!\n",
-      "tchau\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = ClassifierChainWithFTestOrdering(alpha=1)\n",
     "pipe = EvaluationPipeline(model)\n",
@@ -148,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -162,6 +154,18 @@
    ],
    "source": [
     "result.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions so far\n",
+    "\n",
+    "* The bad results, observed in the previous Jupyter notebooks, were observed again, which is actually good and expected.\n",
+    "* It was a bit hard, at first, to comply with the `base_classifier` interface that the evaluation pipeline requires (as it is based on the `cross_validate` function from **scikit**). Main learnis:\n",
+    "  * Your classifier class must set a `copyable_attrs` property, which must match exactly the arguments of the `__init__` method (the constructor of _your_ class).\n",
+    "  * You must also set a `classes_` property, which should be a list of the possible classes that your classifier can predict. You can obtain this list from the `y` argument of the `fit` method, by doing this: `self.classes_ = np.arange(y.shape[1])` (at least in the case of multi-label classification)."
    ]
   }
  ],
