adds more details

--- a/4_second_model_actual_implementation.ipynb
+++ b/4_second_model_actual_implementation.ipynb
@@ -165,7 +165,18 @@
     "* The bad results, observed in the previous Jupyter notebooks, were observed again, which is actually good and expected.\n",
     "* It was a bit hard, at first, to comply with the `base_classifier` interface that the evaluation pipeline requires (as it is based on the `cross_validate` function from **scikit**). Main learnis:\n",
     "  * Your classifier class must set a `copyable_attrs` property, which must match exactly the arguments of the `__init__` method (the constructor of _your_ class).\n",
-    "  * You must also set a `classes_` property, which should be a list of the possible classes that your classifier can predict. You can obtain this list from the `y` argument of the `fit` method, by doing this: `self.classes_ = np.arange(y.shape[1])` (at least in the case of multi-label classification)."
+    "  * You must also set a `classes_` property, which should be a list of the possible classes that your classifier can predict. You can obtain this list from the `y` argument of the `fit` method, by doing this: `self.classes_ = np.arange(y.shape[1])` (at least in the case of multi-label classification).\n",
+    "\n",
+    "\n",
+    "About ensuring that there's no other similar implementations: I checked [my table of implementations](https://docs.google.com/spreadsheets/d/1baAwgRPHXjQbsaoyMByeC9Tfx-SBv0D-irVAWP9mov8/edit#gid=1520672103) again and I could not spot anything similar. Given how bad the final results were, I don't think it's worth it to keep looking for similar implementations, as enough effort was already put into this.\n",
+    "\n",
+    "## Next steps\n",
+    "\n",
+    "The results obtained so far are enough. But I would like to, if time allows to, to further improve the _code_ by:\n",
+    "* Adding unit tests for the function that generates the ordering of the labels (`build_chain_based_on_f_test`).\n",
+    "* Allow reversed ordering.\n",
+    "* Build orders from least to most correlated labels.\n",
+    "* Unit test the actual classifier."
    ]
   }
  ],
