--- a/5_exploring_genetic_algorithms.ipynb
+++ b/5_exploring_genetic_algorithms.ipynb
@@ -302,16 +302,7 @@
     "    hamming_loss = metrics.hamming_loss(\n",
     "        y_test, preds)\n",
     "\n",
-    "    return hamming_loss\n",
-    "    # this will be the fitness function result, and we want to maximize it\n",
-    "    # therefore, we have to return the inverse of the hamming loss\n",
-    "\n",
-    "    # acc = metrics.accuracy_score(\n",
-    "    #     y_test, preds)\n",
-    "\n",
-    "    # print(\"Accuracy score: \", acc)\n",
-    "    # print(\"Hamming loss: \", hamming_loss)\n",
-    "    # print(\"===\")\n"
+    "    return hamming_loss\n"
    ]
   },
   {
@@ -331,6 +322,8 @@
     "\n",
     "    hamming_loss = test_ordering(solution)\n",
     "    return 1/hamming_loss\n",
+    "    # this will be the fitness function result, and we want to maximize it\n",
+    "    # therefore, we have to return the inverse of the hamming loss\n",
     "\n",
     "ga_model = pygad.GA(\n",
     "    gene_type=int,\n",
@@ -455,6 +448,16 @@
      "text": [
       "testing order: [0, 1, 2, 3, 4, 5]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.09085841694537347"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
