removes unused imports

--- a/4_second_model_actual_implementation.ipynb
+++ b/4_second_model_actual_implementation.ipynb
@@ -17,8 +17,7 @@
    "source": [
     "from support import CalculateLabelsCorrelationWithFTest\n",
     "from skmultilearn.dataset import load_dataset\n",
-    "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
-    "from typing import Any, List\n",
+    "from typing import Any\n",
     "import numpy as np\n",
     "from skmultilearn.problem_transform import ClassifierChain\n",
     "from skmultilearn.base import MLClassifierBase\n",
